--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-import streamlit as st
-import pandas as pd
-import base64
-import matplotlib.pyplot as plt
-import seaborn as sns
-import numpy as np
+streamlit==0.61.0
+pandas==0.25.3
+numpy==1.18.1
+scikit-learn==0.22.1
