--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-matplotlib==3.4.1
-numpy==1.20.2
-pandas==1.2.3
-streamlit==0.79.0
+matplotlib==3.4.4
+numpy==1.20.1
+pandas==1.2.4
+streamlit==0.84.0
+seaborn==0.11.1
